[Fix] Correct wrong css and index.html title

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>index <%= env %></title>
+    <title>ConStu <%= env %></title>
   </head>
   <body>
     <div id="app"></div>
