[Improve] Change global styles with css reset - Global Style에 css-reset 적용한다. - Css에 대한 최적화를 위해 웹팩 mini-css-extract-plugin 와 optimize-css-assets-webpack-plugin를 설치 - public html 파일에 meta tag 추가 - font를 html Link 태그 추가 - global.css 파일 삭제

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,38 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" 
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="ConStu">
+    <meta name="description" content="All information about the study is here!
+    Open or participate in a study yourself!">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sweet-1cfff.firebaseapp.com/">
+    <meta property="og:title" content="ConStu">
+    <meta property="og:description" content="All information about the study is here!
+    Open or participate in a study yourself!">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://sweet-1cfff.firebaseapp.com/">
+    <meta property="twitter:title" content="ConStu">
+    <meta property="twitter:description" content="All information about the study is here!
+    Open or participate in a study yourself!">
+
+    <!-- 
+      font-family: 'Gamja Flower', cursive;
+      font-family: 'Jua', sans-serif;
+      font-family: 'Noto Sans KR', sans-serif;
+      font-family: 'D2Coding', monospace;
+    -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Jua&family=Noto+Sans+KR&display=swap" rel="stylesheet">
+    <link href="//cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-full.css" rel="stylesheet" />
+
     <title>ConStu <%= env %></title>
   </head>
   <body>
