[UI & UX] Improve the CSS of the main page
- 메인 페이지의 리스트의 CSS를 변경
- 폰트 변경 및 color 변경

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,10 @@
       font-family: 'Jua', sans-serif;
       font-family: 'Noto Sans KR', sans-serif;
       font-family: 'D2Coding', monospace;
+      font-family: 'Nanum Gothic', sans-serif;
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Jua&family=Noto+Sans+KR&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Jua&family=Noto+Sans+KR&family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link href="//cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-full.css" rel="stylesheet" />
 
     <title>ConStu <%= env %></title>
