--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,13 @@
     Open or participate in a study yourself!">
 
     <!-- 
-      font-family: 'Gamja Flower', cursive;
       font-family: 'Jua', sans-serif;
       font-family: 'Noto Sans KR', sans-serif;
       font-family: 'D2Coding', monospace;
       font-family: 'Nanum Gothic', sans-serif;
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Jua&family=Noto+Sans+KR&family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Noto+Sans+KR&family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link href="//cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-full.css" rel="stylesheet" />
 
     <title>ConStu <%= env %></title>
