[Add] 파비콘과 로고를 만들고 적용해라
- ConStu의 로고와 파비콘을 생성

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko" xml:lang="ko" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" 
@@ -7,22 +7,32 @@
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="ConStu">
-    <meta name="description" content="All information about the study is here!
-    Open or participate in a study yourself!">
+    <meta name="description" content="스터디를 직접 개설하거나 참여해보세요!">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sweet-1cfff.firebaseapp.com/">
     <meta property="og:title" content="ConStu">
-    <meta property="og:description" content="All information about the study is here!
-    Open or participate in a study yourself!">
+    <meta property="og:description" content="스터디를 직접 개설하거나 참여해보세요!">
+    <meta property="og:image" content="./assets/logo.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://sweet-1cfff.firebaseapp.com/">
     <meta property="twitter:title" content="ConStu">
-    <meta property="twitter:description" content="All information about the study is here!
-    Open or participate in a study yourself!">
+    <meta property="twitter:description" content="스터디를 직접 개설하거나 참여해보세요!">
+    <meta property="twitter:image" content="./assets/logo.png">
+
+    <!-- favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+    <link rel="manifest" href="./assets/site.webmanifest">
+    <link rel="mask-icon" href="./assets/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- 
       font-family: 'Jua', sans-serif;
