--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" 
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XEV82059NP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-XEV82059NP');
+    </script>
+
     <!-- Primary Meta Tags -->
     <meta name="title" content="ConStu">
     <meta name="description" content="스터디를 직접 개설하거나 참여해보세요!">
